sf-dynamic-approvals/main/default/objects/DynamicApprovalErrorEvent__c/DynamicApprovalErrorEvent__c.object-meta.xml
<CustomObject>
    <label>Dynamic Approval Error Event</label>
    <nameField>
        <displayFormat>DAE-{00000000}</displayFormat>
        <label>Dynamic Approval Error Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Approval Error Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>