sf-dynamic-approvals/main/default/objects/DynamicApprovalErrorEvent__c/fields/DynamicApprovalAssignment__c.field-meta.xml
<CustomField>
    <fullName>DynamicApprovalAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dynamic Approval Assignment</label>
    <referenceTo>DynamicApprovalAssignment__c</referenceTo>
    <relationshipLabel>Dynamic Approval Error Events</relationshipLabel>
    <relationshipName>DynamicApprovalErrorEvents</relationshipName>
    <type>Lookup</type>
</CustomField>