sf-dynamic-approvals/main/default/objects/DynamicApprovalErrorEvent__c/fields/DynamicApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>DynamicApprovalProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dynamic Approval Process</label>
    <referenceTo>DynamicApprovalProcess__c</referenceTo>
    <relationshipLabel>Dynamic Approval Error Event</relationshipLabel>
    <relationshipName>DynamicApprovalErrorEvents</relationshipName>
    <type>Lookup</type>
</CustomField>