sf-dynamic-approvals/main/default/objects/DynamicApprovalErrorEvent__c/fields/DynamicApprovalStep__c.field-meta.xml
<CustomField>
    <fullName>DynamicApprovalStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dynamic Approval Step</label>
    <referenceTo>DynamicApprovalStep__c</referenceTo>
    <relationshipLabel>Dynamic Approval Error Events</relationshipLabel>
    <relationshipName>DynamicApprovalErrorEvents</relationshipName>
    <type>Lookup</type>
</CustomField>