sf-dynamic-approvals/main/default/objects/DynamicApprovalErrorEvent__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>65000</length>
    <type>LongTextArea</type>
</CustomField>